--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install Godot
-        uses: rafaelalmeidatk/godot-install@v1
+        uses: godotengine/setup-godot@v1
         with:
           godot-version: '3.3.3'
 
