--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,30 +1,17 @@
 name: iOS Export
-
 on:
   push:
-    branches: [ main ]
-
+    branches:
+      - main
 jobs:
   build:
-    runs-on: macos-latest
-
+    runs-on: macOS-latest
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Install Godot
-        uses: godotengine/setup-godot@v1
-        with:
-          godot-version: '3.3.3'
-
-      - name: Install Xcode
-        run: sudo xcode-select --install
-
-      - name: Install iOS Dependencies
-        run: sudo xcode-select --switch /Applications/Xcode.app/Contents/Developer && sudo xcodebuild -runFirstLaunch
-
-      - name: Install iOS Plugins
-        run: godot --gdnative-generate-json-api && godot --gdnative-generate-gir-api
-
-      - name: Export Game for iOS
-        run: godot --export "iOS" /path/to/export/dir
-
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Export iOS
+      uses: firebelley/godot-export@v5.1.0
+      with:
+        platform: ios
+        export_path: path/to/exported/game
+        godot_version: 3.5.1
