--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,8 +14,8 @@ jobs:
       with:
         godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/3.3.3/Godot_v3.3.3-stable_macos.zip
         godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/3.3.3/Godot_v3.3.3-stable_export_templates.tpz
-        relative_project_path: path/to/project
-        platform: ios
+        relative_project_path: ''# Replace with the relative path to your Godot game project in the repository
+        export_preset: export_presets
         export_debug: true
         use_godot_3: false
         export_as_pack: true
