--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,12 +12,9 @@ jobs:
     - name: Export iOS
       uses: firebelley/godot-export@v5.1.0
       with:
-        godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_macos.zip
-        godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_export_templates.tpz
-        relative_project_path: ''  # Set to empty string for root of repository
+        godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/3.4.3/Godot_v3.4.3-stable_macos.zip
+        godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/3.4.3/Godot_v3.4.3-stable_export_templates.tpz
+        relative_project_path: path/to/project
         export_preset: export_presets
         export_debug: true
-        use_godot_3: true
         export_as_pack: true
-
-
