--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,4 @@
-name: iOS Export1
+name: iOS Export
 on:
   push:
     branches:
@@ -18,3 +18,9 @@ jobs:
         export_preset: export_presets
         export_debug: true
         export_as_pack: true
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: iOS Build
+        path: /Users/runner/.local/share/godot/builds/iOS/aaa.ipa.pck
+
