--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,9 +18,15 @@ jobs:
         export_preset: export_presets
         export_debug: true
         export_as_pack: true
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v2
+    - name: Install Xcode
+      uses: actions/setup-xcode@v2.4.0
       with:
-        name: iOS Build
-        path: /Users/runner/.local/share/godot/builds/iOS/aaa.ipa.pck
+        xcode-version: "13.2"
+    - name: Build iOS
+      run: xcodebuild -workspace path/to/your.xcworkspace -scheme "Scheme Name" -configuration Release -archivePath $HOME/build.xcarchive archive -quiet
+    - name: Export IPA
+      uses: actions/upload-artifact@v2.2.4
+      with:
+        name: ios-artifact
+        path: $HOME/build.xcarchive/Products/Applications/*.app
 
