--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,47 +2,23 @@ name: iOS Export
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
-  build:
+  export:
     runs-on: macOS-latest
-
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-
-    - name: Install Xcode
-      uses: actions/setup-xcode@v2.4.1
+    - uses: actions/checkout@v2
+    - uses: firebelley/godot-export@v5.1.0
       with:
-        xcode-select: 'true'
-
-    - name: Install Python
-      uses: actions/setup-python@v2.2.2
-      with:
-        python-version: '3.9'
-
-    - name: Install pip dependencies
+        platform: ios
+        export_presets: export_presets
+    - name: Archive exported game
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: Export iOS
-      uses: firebelley/godot-export@v5.1.0
+        cd export/iOS
+        zip -r my_game_ios.zip .
+    - name: Upload artifact
+      uses: actions/upload-artifact@v2
       with:
-        godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_osx.universal.zip
-        godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_export_templates.tpz
-        relative_project_path: './'
-        export_preset: export_presets
-        export_debug: true
-        export_as_pack: true
-
-    - name: Export IPA
-      run: xcodebuild -exportArchive -archivePath ./ios_export/archive.xcarchive -exportPath ./ios_export -exportOptionsPlist exportOptions.plist
-
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v2.2.4
-      with:
-        name: iOS Build
-        path: ./path/to/project/ios_export
+        name: my_game_ios
+        path: export/iOS/my_game_ios.zip
