--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,25 +1,34 @@
 name: iOS Export
+
 on:
   push:
     branches:
       - main
+
 jobs:
   build:
-    runs-on: macOS-latest
+    runs-on: macos-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    - name: Export iOS
-      uses: firebelley/godot-export@v5.1.0
+    - name: Set up Xcode
+      uses: actions/setup-xcode@v2.5.3
       with:
-        godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_osx.universal.zip
-        godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_export_templates.tpz
-        relative_project_path: './'
-        export_preset: export_presets
-        export_debug: true
-        export_as_pack: true
+        xcode-version: '13.x'
+    - name: Install Dependencies
+      run: |
+        brew install pkg-config
+        brew install libzip
+        brew install wget
+    - name: Export iOS
+      run: |
+        wget https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_osx.universal.zip
+        unzip Godot_v3.5.1-stable_osx.universal.zip
+        chmod +x Godot_v3.5.1-stable_osx.universal/Godot\ Engine.app/Contents/MacOS/Godot
+        wget https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_export_templates.tpz
+        ./Godot_v3.5.1-stable_osx.universal/Godot\ Engine.app/Contents/MacOS/Godot --export "iOS" /Users/runner/work/your-repo-name/your-repo-name/project.godot /Users/runner/work/your-repo-name/your-repo-name/builds/iOS/YourAppName.ipa
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
         name: iOS Build
-        path: /Users/runner/.local/share/godot/builds/iOS/aaa
+        path: /Users/runner/work/your-repo-name/your-repo-name/builds/iOS/YourAppName.ipa
