--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Set up Xcode
-      uses: actions/setup-xcode@v2.5.3
+      uses: maxim-lobanov/setup-xcode@v1.5.1
       with:
         xcode-version: '13.x'
     - name: Install Dependencies
