--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,14 +14,14 @@ jobs:
         run: |
           curl -L -o Godot_v3.5.1-stable_osx.universal.zip https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_osx.universal.zip
           unzip Godot_v3.5.1-stable_osx.universal.zip
-          ls Godot_v3.5.1-stable_osx.universal/Godot\ Engine.app/Contents/MacOS/
-          chmod +x ./Godot_v3.5.1-stable_osx.universal/Godot\ Engine.app/Contents/MacOS/Godot
-          ./Godot_v3.5.1-stable_osx.universal/Godot\ Engine.app/Contents/MacOS/Godot --version
+          ls "./Godot_v3.5.1-stable_osx.universal/Godot Engine.app/Contents/MacOS/"
+          chmod +x "./Godot_v3.5.1-stable_osx.universal/Godot Engine.app/Contents/MacOS/Godot"
+          "./Godot_v3.5.1-stable_osx.universal/Godot Engine.app/Contents/MacOS/Godot" --version
 
       - name: Export iOS
         uses: firebelley/godot-export@v5.1.0
         with:
-          godot_executable_path: ./Godot_v3.5.1-stable_osx.universal/Godot\ Engine.app/Contents/MacOS/Godot
+          godot_executable_path: "./Godot_v3.5.1-stable_osx.universal/Godot Engine.app/Contents/MacOS/Godot"
           relative_project_path: './'
           export_preset: export_presets
           export_debug: true
@@ -31,4 +31,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: iOS Build
-          path: /Users/runner/.local/share/godot/builds/iOS/aaa.ipa
+          path: /Users/runner/.local/share/godot/builds/iOS/aaa
