--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,33 +1,41 @@
-name: Export iOS app
-
+name: iOS and Android Export
 on:
   push:
     branches:
       - main
-
 jobs:
-  export:
-    runs-on: macos-latest
+  build:
+    runs-on: macOS-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Setup Godot
-        uses: firebelley/godot-export@v5.1.0
-        with:
-          godot-version: 3.5.1
-
-      - name: Export iOS app
-        uses: firebelley/godot-export@v5.1.0
-        with:
-          godot-project: .
-          platform: ios
-          export-presets: 'debug'
-          export-path: './export'
-          export-name: 'MyGame'
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: MyGame-iOS
-          path: ./export/MyGame.ipa
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Export iOS
+      uses: firebelley/godot-export@v5.1.0
+      with:
+        godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_osx.universal.zip
+        godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_export_templates.tpz
+        relative_project_path: './'
+        export_preset: export_presets
+        export_debug: true
+        export_as_pack: true
+        platform: ios
+    - name: Export Android
+      uses: firebelley/godot-export@v5.1.0
+      with:
+        godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_linux_headless.64.zip
+        godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_export_templates.tpz
+        relative_project_path: './'
+        export_preset: export_presets
+        export_debug: true
+        export_as_pack: true
+        platform: android
+    - name: Upload Artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: iOS Build
+        path: /Users/runner/.local/share/godot/builds/iOS/aaa.ipa
+    - name: Upload Artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: Android Build
+        path: /Users/runner/.local/share/godot/builds/Android/aaa.apk
