--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,37 +5,38 @@ on:
       - main
 jobs:
   build:
+    name: Build and export iOS and Android apps
     runs-on: macOS-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Export iOS
-      uses: firebelley/godot-export@v5.1.0
-      with:
-        godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_osx.universal.zip
-        godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_export_templates.tpz
-        relative_project_path: './'
-        export_preset: export_presets
-        export_debug: true
-        export_as_pack: true
-        platform: ios
-    - name: Export Android
-      uses: firebelley/godot-export@v5.1.0
-      with:
-        godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_linux_headless.64.zip
-        godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_export_templates.tpz
-        relative_project_path: './'
-        export_preset: export_presets
-        export_debug: true
-        export_as_pack: true
-        platform: android
-    - name: Upload Artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: iOS Build
-        path: /Users/runner/.local/share/godot/builds/iOS/aaa.ipa
-    - name: Upload Artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: Android Build
-        path: /Users/runner/.local/share/godot/builds/Android/aaa.apk
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Export iOS build
+        uses: firebelley/godot-export@v5.1.0
+        with:
+          godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_osx.universal.zip
+          godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_export_templates.tpz
+          relative_project_path: './'
+          export_preset: export_presets
+          export_debug: true
+          export_as_pack: true
+          platform: ios
+      - name: Export Android build
+        uses: firebelley/godot-export@v5.1.0
+        with:
+          godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_linux_headless.64.zip
+          godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_export_templates.tpz
+          relative_project_path: './'
+          export_preset: export_presets
+          export_debug: true
+          export_as_pack: true
+          platform: android
+      - name: Upload iOS artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: iOS build artifact
+          path: /Users/runner/.local/share/godot/builds/iOS/aaa.ipa
+      - name: Upload Android artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: Android build artifact
+          path: /Users/runner/.local/share/godot/builds/Android/aaa.apk
