--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,30 +1,66 @@
-name: iOS and Android Export
+name: Android Export
+
 on:
   push:
     branches:
       - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Export Android
-      uses: firebelley/godot-export@v5.1.0
-      with:
-        godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_linux_headless.64.zip
-        godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_export_templates.tpz
-        relative_project_path: './'
-        export_preset: export_presets
-        export_debug: true
-        export_as_pack: true
-        platform: android
-    - name: Create Directory and Move Export Templates
-      run: |
-        mkdir -p /Users/runner/Library/Application\ Support/Godot/export_templates
-        mv /Users/runner/.local/share/godot/3.5.1.stable /Users/runner/Library/Application\ Support/Godot/export_templates
-    - name: Upload Artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: Android Build
-        path: /Users/runner/.local/share/godot/builds/Android/aaa.apk
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up JDK 8
+        uses: actions/setup-java@v2
+        with:
+          java-version: 8
+
+      - name: Download Android SDK
+        uses: android-actions/setup-android-sdk@v2
+        with:
+          sdk-platform: '29'
+          sdk-build-tools: '29.0.3'
+
+      - name: Build Android APK
+        uses: Firebelley/godot-export@v5.1.0
+        with:
+          godot-version: '3.5.1'
+          export-presets: 'Android'
+          export-path: './export'
+          android-sdk-path: ${{ env.ANDROID_SDK_ROOT }}
+
+      - name: Download APKs
+        uses: actions/download-artifact@v2
+        with:
+          name: apks
+          path: export
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: |
+            Automatic release from ${{ github.ref }}
+          draft: false
+          prerelease: false
+
+      - name: Upload APKs
+        uses: actions/upload-artifact@v2
+        with:
+          name: apks
+          path: export
+          if-no-files-found: error
+
+      - name: Attach APKs to Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            export/*.apk
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag_name: ${{ github.ref }}
