--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,4 +35,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: iOS Build
-        path: MyProject.xcarchive/Products/Applications/MyProject.ipa
+        path: aaa.xcarchive/Products/Applications/aaa.ipa
