--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,15 +21,20 @@ jobs:
         relative_project_path: './'
         export_preset: export_presets
         export_debug: true
-        export_as_pack: true
+        export_as_pack: false
+        
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: Godot iOS Build 
+        path: export/iOS/aaa.ipa.zip
 
     - name: Build iOS App
-      uses: actions/setup-node@v2
+      uses: apple/setup-xcode@v2
       with:
-        node-version: '16'
-        run: |
-         npm install -g xcode
-         xcode archive -allowProvisioningUpdates -workspace aaa.xcworkspace -scheme MyScheme -archivePath aaa.xcarchive
+        xcode-select: '12.5'
+      run: |
+        xcodebuild archive -allowProvisioningUpdates -workspace aaa.xcworkspace -scheme MyScheme -archivePath aaa.xcarchive
 
     - name: Export IPA
       uses: actions/upload-artifact@v2
