--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,8 +26,8 @@ jobs:
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: Godot iOS Build 
-        path: export/iOS/aaa.ipa
+        name: iOS Build
+        path: /Users/runner/.local/share/godot/builds/iOS/aaa.ipa.pck
 
     - name: Build iOS App
       run: |
