--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,15 +18,15 @@ jobs:
         mkdir godotgame
 
     - name: Export iOS
-      working-directory: ./godotgame
       uses: firebelley/godot-export@v5.1.0
       with:
         godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_osx.universal.zip
         godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_export_templates.tpz
-        relative_project_path: './'
+        relative_project_path: './godotgame/'
         export_preset: export_presets
         export_debug: true
         export_as_pack: true
+        export_path: './godotgame'
         
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
@@ -46,14 +46,13 @@ jobs:
         node-version: '16'
 
     - name: Build iOS App
-      working-directory: ./godotgame
       run: |
+        cd godotgame
         npm install -g xcode
         xcode archive -allowProvisioningUpdates -workspace aaa.xcworkspace -scheme MyScheme -archivePath aaa.xcarchive
 
     - name: Export IPA
-      working-directory: ./godotgame
       uses: actions/upload-artifact@v2
       with:
         name: iOS Build
-        path: aaa.xcarchive/Products/Applications/aaa.ipa
+        path: godotgame/aaa.xcarchive/Products/Applications/aaa.ipa
