--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,59 +1,38 @@
-name: iOS Export1
+name: iOS Export
 
 on:
   push:
     branches:
       - main
-      
+
 jobs:
   build:
     runs-on: macOS-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
+      - name: Export iOS
+        uses: firebelley/godot-export@v5.1.0
+        with:
+          godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_osx.universal.zip
+          godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_export_templates.tpz
+          relative_project_path: '.'
+          export_preset: MyExportPreset
+          export_debug: true
+          export_as_pack: true
 
-    - name: Make directory for godotgame
-      run: |
-        mkdir godotgame
+      - name: Build iOS App
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+          run: |
+           npm install -g xcode
+           xcode-select --install
+           xcodebuild -version
+           xcodebuild -workspace aaa.xcworkspace -scheme MyScheme -archivePath aaa.xcarchive archive
+           xcodebuild -exportArchive -allowProvisioningUpdates -archivePath aaa.xcarchive -exportOptionsPlist exportOptions.plist -exportPath ./
 
-    - name: Export iOS
-      uses: firebelley/godot-export@v5.1.0
-      with:
-      
-        godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_osx.universal.zip
-        godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_export_templates.tpz
-        relative_project_path: './'
-        export_preset: export_presets
-        export_debug: true
-        export_as_pack: true
-        export_path: './godotgame'
-        
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: Godot iOS Build 
-        path: godotgame/*
-
-    - name: Check Xcode project files
-      run: |
-        if [ ! -f "./godotgame/project.pbxproj" ]; then echo "Error: Missing project.pbxproj file"; exit 1; fi
-        if [ ! -f "./godotgame/Info.plist" ]; then echo "Error: Missing Info.plist file"; exit 1; fi
-        if [ ! -d "./godotgame/Assets.xcassets" ]; then echo "Error: Missing Assets.xcassets directory"; exit 1; fi
-
-    - name: Setup Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '16'
-
-    - name: Build iOS App
-      run: |
-        cd godotgame
-        npm install -g xcode
-        xcode archive -allowProvisioningUpdates -workspace aaa.xcworkspace -scheme MyScheme -archivePath aaa.xcarchive
-
-    - name: Export IPA
-      uses: actions/upload-artifact@v2
-      with:
-        name: iOS Build
-        path: godotgame/aaa.xcarchive/Products/Applications/aaa.ipa
+      - name: Export IPA
+        uses: actions/upload-artifact@v2
+        with:
+          name: iOS Build
+          path: ./*.ipa
