--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,8 +15,8 @@ jobs:
         with:
           godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_osx.universal.zip
           godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_export_templates.tpz
-          relative_project_path: '.'
-          export_preset: MyExportPreset
+          relative_project_path: './'
+          export_preset: export_presets
           export_debug: true
           export_as_pack: true
 
